--- a/src/index.css
+++ b/src/index.css
@@ -13,16 +13,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+html, body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
   min-width: 320px;
-  min-height: 100vh;
 }
 
 #root {
   width: 100%;
+  height: 100%;
   margin: 0 auto;
   text-align: center;
 }
